protocols/src/tests/snapshots/protocols__frontend__typecheck__tests__add_d1.snap
---
source: protocols/src/frontend/typecheck.rs
expression: content
---
warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/adders/adder_d1/add_d1.prot:12:3
   │
12 │   DUT.a := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/adders/adder_d1/add_d1.prot:13:3
   │
13 │   DUT.b := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/adders/adder_d1/add_d1.prot:25:3
   │
25 │   DUT.b := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.
