protocols/src/tests/snapshots/protocols__frontend__typecheck__tests__cond.snap
---
source: protocols/src/frontend/typecheck.rs
expression: content
---
warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/multipliers/mult_cond.prot:19:3
   │
19 │   dut.a := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/multipliers/mult_cond.prot:20:3
   │
20 │   dut.b := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.
