protocols/src/tests/snapshots/protocols__frontend__typecheck__tests__invalid_step_arg.snap
---
source: protocols/src/frontend/typecheck.rs
expression: content
---
error: Step call expected single positive integer as argument, got 0.
  ┌─ tests/misc/invalid_step_arg.prot:8:3
  │
8 │   step(0);
  │   ^^^^^^^^ Step call expected single positive integer as argument, got 0.
